<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jaimea.miappcurso.PantJuego">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@color/blanco">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/presence_away" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TIEMPO"
                    android:id="@+id/textView"
                    android:textSize="45sp"
                    android:textColor="@color/txt_rojo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txt_usuario"
                    android:textSize="35sp"
                    android:gravity="center_vertical|right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/txt_tiempo"
                    android:layout_gravity="center_horizontal"
                    android:textSize="66sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="AZUL"
                    android:id="@+id/color_texto"
                    android:layout_gravity="center"
                    android:textColor="@color/azul"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textView2"
                        android:textSize="30sp"
                        android:text="@string/_10"
                        android:background="@color/verde"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/intentos"
                        android:id="@+id/textView3"
                        android:textSize="30sp"
                        android:background="@color/btnNaranja"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textView5"
                        android:textSize="30sp"
                        android:text="@string/_4"
                        android:background="@color/btnNaranja"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Incorrectos"
                        android:id="@+id/textView6"
                        android:textSize="30sp"
                        android:background="@color/verde"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:id="@+id/textView4"
                        android:textSize="30sp"
                        android:text="@string/_4"
                        android:background="@color/verde"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Correcto"
                        android:id="@+id/textViewIncorrecto"
                        android:textSize="30sp"
                        android:background="@color/btnNaranja"
                        android:textColor="@color/blanco"
                        android:textStyle="bold"
                        android:padding="5dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/thumb_up"
                    android:paddingRight="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/thumb_down"
                    android:paddingLeft="30dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
